# opengl-test-win

./: .clang-format  .clangd  .gitattributes  CMakeLists.txt  README.md  TIPS.md
common/: camera.cpp  camera.hpp  cube.cpp  cube.hpp  log.c  log.h  model.cpp  model.hpp  shader.c  shader.cpp  shader.h  shader.hpp
light/: CMakeLists.txt  cube_fragment.glsl  cube_vertex.glsl  light_fragment.glsl  main.cpp
loadmodel/: CMakeLists.txt  fragment.glsl  main.cpp  vertex.glsl
triangle/: CMakeLists.txt  fragment.glsl  main.c  main.cpp  vertex.glsl
